# ExampleVisitorProxy

./: CMakeLists.txt  CMakePresets.json  conanfile.py
src/: main.cpp
src/instruments/: AllInstrumentFactories.h  Instrument.h  InstrumentA.h  InstrumentAFactory.cpp  InstrumentAFactory.h  InstrumentB.h  InstrumentBFactory.cpp  InstrumentBFactory.h  InstrumentFactory.cpp  InstrumentFactory.h  InvalidInstrument.h  InvalidInstrumentFactory.cpp  InvalidInstrumentFactory.h
src/trades/: AllTrades.h  InvalidTrade.h  Trade.h  TradeA.h  TradeB.h  TradeFactory.cpp  TradeFactory.h
